New file About DOM

--- a/Livro JavaScript & JQuery/c05/inner-html.html
+++ b/Livro JavaScript & JQuery/c05/inner-html.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Corpo da página HTML </title>
+    <title> innertHtml </title>
     <link rel="stylesheet" href="css/c05.css">
 </head>
 
@@ -19,7 +19,7 @@
             <li id='three' class="hot"> honey </li>
             <li id='four'> balsamic vinegar </li>
         </ul>
-        <script src="js/list.js"></script>
+        <script src="js/inner-html.js"></script>
     </div>
 
 </body>
