--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/html/index.html
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/html/index.html
@@ -23,6 +23,10 @@
         <a href wm-nav="exercicio/texto2.html">02 - Texto 2</a> |
         <a href wm-nav="exercicio/listas.html">03 - Listas</a> |
         <a href wm-nav="exercicio/listaAninhada.html">04 - Listas Aninhadas</a> |
+        <a href wm-nav="exercicio/links.html">05 - Links</a> |
+        <a href wm-nav="exercicio/tabela.html">06 - Tabela</a> |
+        <a href wm-nav="exercicio/form/form.html">07 - Formulário</a> |
+        <a href wm-nav="exercicio/imagens.html">08 - Imagens</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
