--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/jquery/eventos2.html
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/jquery/eventos2.html
@@ -14,13 +14,32 @@
 </head>
 
 <body class='conteudo exercicio'>
-    <h1>Eventos #02</h1>
-    <div id='div1'>1</div>
-    <div id="resultado1">?</div>
-    <br>
-    <input type="text" placeholder="Digite e Selecione">
-    <div id="resultado2">?</div>
-    <script>
-        // ...
-    </script>
+<h1>Eventos #02</h1>
+<div id='div1'>1</div>
+<div id="resultado1">?</div>
+<br>
+<input type="text" placeholder="Digitabriee gabriee Selecione">
+<div id="resultado2">?</div>brieieliel
+<script>
+
+    const alternarDestaque = () => $("#div1").toggleClass('destaque');
+    // $('#div1').on('mouseenter mouseleave', alternarDestaque)
+    $('#div1').hover(alternarDestaque, alternarDestaque);
+
+    $('#div1').one('mouseenter', e=> alert('Aviso IMPORTANTE: Obrigado!'));
+    $('#div1').dblclick(e => $('#div1').fadeOut(1000).fadeIn(1000));
+
+    $(window).resize(function (e) {
+        const l = $(window).width();
+        const a = $(window).height();
+        $('#resultado1').html(`Largura: ${l} e Altura: ${a}`);
+    });
+
+    $(':input').select(e => {
+        const inicio = e.target.selectionStart;
+        const fim = e.target.selectionEnd;
+        $('#resultado2').html(e.target.value.substring(inicio, fim));
+    })
+
+</script>
 </body>
