--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/jquery/modificandoHTML1.html
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/jquery/modificandoHTML1.html
@@ -9,12 +9,35 @@
 </head>
 
 <body class='conteudo exercicio'>
-    <h1>Modificando HTML #01</h1>
-    <div id='conteudo1'></div>
-    <div id='conteudo2'></div>
-    <div id='conteudo3'></div>
+<h1>Modificando HTML #01</h1>
+<div id='conteudo1'></div>
+<div id='conteudo2'></div>
+<div id='conteudo3'></div>
+<div>Sem ID!</div>
 
-    <script>
-        // ...
-    </script>
+<script>
+    // Conteudo 1
+    $('#conteudo1').append('<p>1</p>');
+
+    // Conteudo 2
+    // Criando elementos com jQuery
+    const elementos = [
+        $('<li></li>').append('Arroz'),
+        $('<li>').append('Feijão'),
+        $('<li>').append('Carne')
+    ];
+
+    const lista = $('<ul><li>Sorvete</li></ul>').prepend(elementos); // prepend adiciona antes dos elementos que estão na página
+    $('#conteudo2').append(lista); // append adiciona depois dos elementos que estão na página
+
+    // Conteudo 3
+    $('#conteudo3').append(['<h1>1</h1>', '<h1>2</h1>'])
+        .prepend('<h1>0</h1>');
+    $('#conteudo3').html('<h1>123</h1>'); // Substitui o conteúdo
+    $('#conteudo3').text('<h1>123</h1>');   // Escrebe literalmente o texto passado
+
+    // Alterando todos
+    $('div[id]').html('<strong>Todos!</strong>')
+
+</script>
 </body>
