--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/bootstrap/exercicios/paginas/formulario.html
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/bootstrap/exercicios/paginas/formulario.html
@@ -4,12 +4,12 @@
 </div>
 
 <nav class="mb-5">
-    <o class="breadcrumb">
+    <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="#/paginas/bemVindo.html">Home</a>
         </li>
         <li class="breadcrumb-item active">Formulário</li>
-    </o>
+    </ol>
 </nav>
 
 <p class="lead">
@@ -17,3 +17,15 @@
 </p>
 
 <!-- Formulário -->
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">Exemplo ed Formulário</h5>
+    </div>
+    <div class="card-body">
+        <form action="" class="container-fluid">
+            <div class="form-row">
+                
+            </div>
+        </form>
+    </div>
+</div>
