--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/bootstrap/exercicios/paginas/fundamentos.html
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/bootstrap/exercicios/paginas/fundamentos.html
@@ -4,12 +4,12 @@
 </div>
 
 <nav class="mb-5">
-    <o class="breadcrumb">
+    <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="#/paginas/bemVindo.html">Home</a>
         </li>
         <li class="breadcrumb-item active">Fundamentos</li>
-    </o>
+    </ol>
 </nav>
 
 <div class="exercicio">
